Complete logical view feature coverage